# ai_code_explainer_on_copy

./: .env.example  .gitignore  CHANGELOG.md  LICENCE.md  MEDIUM_BLOG_POST.md  README.md  ai_providers.py  clipboard_monitor.py  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_font.py
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  publish.yaml  validate.yml
tests/: __init__.py  test_ai_providers.py  test_clipboard_monitor.py  test_config.py  test_pyproject.py
ui/: app.py  popup.py  settings.py
