[tool.poetry]
name = "auto-code-explainer"
version = "0.2.0"
description = "Automatic code explanation tool - monitors clipboard and explains code using AI"
license = "MIT"
authors = ["Satish Hiremath"]
readme = "README.md"
homepage = "https://github.com/yourusername/auto-code-explainer"
repository = "https://github.com/yourusername/auto-code-explainer"
keywords = ["code", "explainer", "ai", "clipboard", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = ">=2.31.0"
pyperclip = ">=1.8.2"
pystray = ">=0.19.5"
Pillow = ">=10.0.0"
pyttsx3 = ">=2.90"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pylint = "^3.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
auto-code-explainer = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-v --cov=ui --cov=clipboard_monitor --cov=config --cov=ai_providers --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning:pystray.*",
]

[tool.coverage.run]
source = ["ui", "clipboard_monitor", "config", "ai_providers"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503","E501"]
